package patterns.structural.facade;
public class CPU {

	public void start() {
		System.out.println("CPU has started.");
	}
}
