package patterns.structural.facade;
public class Display {

	public void start() {
		System.out.println("Display has started.");
	}
}
