package patterns.structural.facade;
public class HardDrive {
	
	public void start() {
		System.out.println("HardDrive has started.");
	}
}
